tests/baselines/reference/typeParameterAssignability3.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts(14,5): error TS2322: Type 'U' is not assignable to type 'T'.
  'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Foo'.
    Type 'Foo' is not assignable to type 'T'.
      'Foo' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Foo'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts(15,5): error TS2322: Type 'T' is not assignable to type 'U'.
  'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint 'Foo'.
    Type 'Foo' is not assignable to type 'U'.
      'Foo' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint 'Foo'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts(22,9): error TS2322: Type 'U' is not assignable to type 'T'.
  'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Foo'.
    Type 'Foo' is not assignable to type 'T'.
      'Foo' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Foo'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts(23,9): error TS2322: Type 'T' is not assignable to type 'U'.
  'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint 'Foo'.
    Type 'Foo' is not assignable to type 'U'.
      'Foo' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint 'Foo'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts (4 errors) ====
    // type parameters are not assignable to one another unless directly or indirectly constrained to one another
    
    class Foo { foo: string; }
    
    function foo<T extends Foo, U extends Foo>(t: T, u: U) {
        var a: T;
        var b: U;
        t = a; // ok
        a = t; // ok
    
        b = u; // ok
        u = b; // ok
    
        t = u; // error
        ~
!!! error TS2322: Type '{|U|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|U|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|Foo|5|}'.
!!! error TS2322:     Type '{|Foo|6|}' is not assignable to type '{|T|7|}'.
!!! error TS2322:       '{|Foo|8|}' is assignable to the constraint of type '{|T|9|}', but '{|T|10|}' could be instantiated with a different subtype of constraint '{|Foo|11|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:29
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:14
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:29
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:14
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:14
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:14
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:14
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:14
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
        u = t; // error
        ~
!!! error TS2322: Type '{|T|0|}' is not assignable to type '{|U|1|}'.
!!! error TS2322:   '{|T|2|}' is assignable to the constraint of type '{|U|3|}', but '{|U|4|}' could be instantiated with a different subtype of constraint '{|Foo|5|}'.
!!! error TS2322:     Type '{|Foo|6|}' is not assignable to type '{|U|7|}'.
!!! error TS2322:       '{|Foo|8|}' is assignable to the constraint of type '{|U|9|}', but '{|U|10|}' could be instantiated with a different subtype of constraint '{|Foo|11|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:29
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:14
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:29
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:29
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:29
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:29
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:5:29
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
    }
    
    class C<T extends Foo, U extends Foo> {
        t: T;
        u: U;
        r = () => {
            this.t = this.u; // error
            ~~~~~~
!!! error TS2322: Type '{|U|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|U|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|Foo|5|}'.
!!! error TS2322:     Type '{|Foo|6|}' is not assignable to type '{|T|7|}'.
!!! error TS2322:       '{|Foo|8|}' is assignable to the constraint of type '{|T|9|}', but '{|T|10|}' could be instantiated with a different subtype of constraint '{|Foo|11|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:24
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:9
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:24
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:9
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:9
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:9
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:9
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:9
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
            this.u = this.t; // error
            ~~~~~~
!!! error TS2322: Type '{|T|0|}' is not assignable to type '{|U|1|}'.
!!! error TS2322:   '{|T|2|}' is assignable to the constraint of type '{|U|3|}', but '{|U|4|}' could be instantiated with a different subtype of constraint '{|Foo|5|}'.
!!! error TS2322:     Type '{|Foo|6|}' is not assignable to type '{|U|7|}'.
!!! error TS2322:       '{|Foo|8|}' is assignable to the constraint of type '{|U|9|}', but '{|U|10|}' could be instantiated with a different subtype of constraint '{|Foo|11|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:9
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:24
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:9
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:24
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:24
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:24
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:24
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:18:24
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability3.ts:3:7
        }
    }